# arbital

./: README.md  arbital  build.sh  deploy.sh
backend/: arbital.cabal  stack.yaml
backend/app/: Main.hs
backend/src/Arbital/: Constants.hs  Database.hs  Endpoints.hs  Handlers.hs  Missing.hs  State.hs  Types.hs
backend/src/Arbital/Database/: Argument.hs  Claim.hs  Driver.hs  Items.hs  User.hs
backend/src/Arbital/Endpoints/: Arguments.hs  Authenticated.hs  Claims.hs  Users.hs
frontend/: package.json
frontend/config/: webpack.config.js
frontend/src/: actions.js  index.html  main.js  reducers.js
frontend/src/classes/: Argument.js
frontend/src/components/: Argument.js  AuthorChip.js  AuthoredListItem.js  Claim.js  CreateArgument.js  CreateClaim.js  Feed.js  Finder.js  Footer.js  Header.js  Login.js  Logout.js  User.js
frontend/src/components/dialogs/: CreateArgument.js  CreateClaim.js  DialogStack.js  DialogSwitch.js
frontend/src/components/hoc/: AuthenticatedHOC.js  GetterHOC.js  PageHOC.js  StackedHOC.js
frontend/src/components/items/: ArgumentListItem.js  AuthoredListItem.js  ClaimListItem.js
frontend/src/components/pages/: Argument.js  Claim.js  Feed.js  Login.js  Logout.js  User.js
frontend/src/containers/: AppContainer.js  shit.js
frontend/src/hoc/: AuthenticatedHOC.js  GetterHOC.js  LayoutHOC.js
frontend/src/layouts/CoreLayout/: CoreLayout.js
frontend/src/routes/: index.js
frontend/src/store/: createStore.js
frontend/src/styles/: core.scss
frontend/src/util/: backend.js
