name:                arbital
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/arbital#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Arbital.Endpoints
                       Arbital.Types
                       Arbital.Handlers
  build-depends:       base >= 4.7 && < 5
                     , time
                     , text
                     , servant
                     , aeson
  default-language:    Haskell2010
  ghc-options:         -fprof-auto
                       -Wall
                       -fwarn-identities
                       -fwarn-missing-signatures
                       -fno-warn-unused-do-bind
                       -Werror

executable arbital-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , arbital
  default-language:    Haskell2010

test-suite arbital-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , arbital
  ghc-options:         -threaded 
                       -fprof-auto
                       -Wall
                       -fwarn-identities
                       -fwarn-missing-signatures
                       -fno-warn-unused-do-bind
                       -Werror
                       -rtsopts
                       -with-rtsopts=-N

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/arbital
